--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
              <h1>Entre em contato</h1>
              <ul>
             <li><i data-feather="coffee"></i>Rua Jose Bonifacio, 100</li>  
-            <li><i data-feather="coffee"></i>contato@emailaranja.com.br</li>  
+            <li><i data-feather="coffee"></i>contato@emaicontato.com.br</li>  
             <li><i data-feather="coffee"></i>(55 99999-9999)</li>  
              </ul>
           </div>
